# Data_Structures_Group_Course

./: .gitignore  CMakeLists.txt  LICENSE  README.md  resources.qrc
Qt/: BrowsePage.qml  ChangePasswordPage.qml  DataImportPage.qml  LoginPage.qml  MainMenu.qml  ProductCard.qml  ProductDetailPage.qml  ProductManagementPage.qml  RecommendationPage.qml  RegisterPage.qml  UserInfoPage.qml  UserManagementPage.qml  adminPage.qml  mainWindow.qml  run.bat  shoppingCare.qml
include/: DataManager.h  Login.h  Recommender.h  StateManager.h  UserManager.h
include/nlohmann/: json.hpp  json_fwd.hpp
src/: CMakeLists.txt  DataImport.cpp  DataManager.cpp  DataManager_README.md  Login.cpp  Recommender.cpp  StateManager.cpp  UserManager.cpp  main.cpp  products.json  users.json
